crates/plotnik-tests/tests/02-parser/recovery_validation/comma_in_sequence.txt
Q = {(a), (b)}
------------------ DIAGNOSTICS -------------------
error: patterns are separated by whitespace
 --> query.ptk:1:9
  |
1 | Q = {(a), (b)}
  |         ^
  |
help: remove the `,`
  |
1 - Q = {(a), (b)}
1 + Q = {(a) (b)}
  |
